--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -29,14 +29,14 @@
          <%#= link_to event.categories_primary_name.try(:capitalize), category_events_path(event.categories_primary_name) %>
          <!--      </span>-->
          <!--        <span aria-hidden="true"> · </span>-->
-         <div class="me-card__date <%= event.day_of_week['decorator'].parameterize %>"
+         <div class="me-card__date is-hoverable <%= event.day_of_week['decorator'].parameterize %>"
                data-target="event.date"
                onclick="Turbolinks.visit('<%= day_events_path event.day_of_week['date'].strftime('%d-%m-%Y') %>')">
            <span>
              <i></i> <%= event.day_of_week['decorator'] %> <%= format_hour event.first_day_time %>
            </span>
            <span class="me-card__date-distance-in-words">
-             <%= event.first_day_time > DateTime.now ? "Daqui #{distance_of_time_in_words event.first_day_time, DateTime.now}" : "Iniciou há #{distance_of_time_in_words event.first_day_time, DateTime.now}" %>
+              · <%= event.first_day_time > DateTime.now ? "Daqui #{distance_of_time_in_words event.first_day_time, DateTime.now}" : "Iniciou há #{distance_of_time_in_words event.first_day_time, DateTime.now}" %>
            </span>
          </div>
          <% if event.details_prices.present? %>
