--- a/web/app/views/layouts/dashboard.html.erb
+++ b/web/app/views/layouts/dashboard.html.erb
@@ -64,7 +64,7 @@
   </section>
 <% else %>
   <%= render partial: "layouts/app-top-bar" %>
-  <section class="me-page me-page--profile__section is-animated">
+  <section class="me-page me-page--profile is-animated">
     <%#= render partial: 'layouts/bot' %>
     <!--    <div class="me-overlay"></div>-->
     <%= yield %>
