--- a/web/app/assets/stylesheets/components/me-event-single.scss
+++ b/web/app/assets/stylesheets/components/me-event-single.scss
@@ -1,7 +1,17 @@
 @import "variables";
 
+@mixin is-clickable {
+  background: $border-color;
+  padding: 4px 8px;
+  border-radius: 12px;
+  display: inline-block;
+  line-height: 1em;
+  &:hover {
+    background: lighten($border-color, 5%);
+  }
+}
+
 @mixin with-divider {
-  //margin: 0 0 24px 0;
   border-bottom: 1px solid $border-color;
   padding: 24px 0;
 }
@@ -63,27 +73,12 @@
   }
 
   &__head {
-    //display: flex;
-    //flex-direction: row;
-    //align-items: baseline;
-    //flex-wrap: wrap;
-    //justify-content: center;
-    //align-content: baseline;
-    //position: relative;
-    //@include mdc-layout-grid-media-query_("phone") {
-    //  height: auto;
-    //  align-content: center;
-    //  justify-content: center;
-    //  flex-direction: row;
-    //  width: 100vw;
-    //  top: -24px;
-    //  left: -24px;
-    //}
+
   }
 
   &__content {
     padding: 0 $section-padding-phone;
-    display: inline-block;
+    display: block;
   }
 
   &__media {
@@ -91,9 +86,7 @@
     height: 370px;
     background-size: cover;
     background-position: center;
-    //border-radius: $media-border-radius;
     position: relative;
-    //box-shadow: $media-box-shadow-large;
     @include mdc-layout-grid-media-query_("phone") {
       width: 100%;
       height: 200px;
@@ -114,9 +107,7 @@
     @include with-divider;
     @include mdc-layout-grid-media-query_("phone") {
       font-size: 21px;
-      width: 90%;
       text-align: center;
-      margin: 15px 0 0 0;
     }
   }
 
@@ -136,25 +127,45 @@
   }
 
   &__like-button {
-    //bottom: -20px;
+    position: absolute;
+    z-index: 2;
+    top: 56px;
     right: 16px;
-  }
+    border-radius: 25px;
+    overflow: hidden;
+    box-shadow: 0 1px 12px rgba(0, 0, 0, 0.25);
+    @include mobile-only {
+      top: 16px;
+      right: 16px
+    }
 
-  //&__primary-section {
-  //color: $font-primary-color;
-  //text-transform: none;
-  //display: flex;
-  //margin: 50px 0;
-  //@include mdc-layout-grid-media-query_("phone") {
-  //  flex-direction: column;
-  //  margin: 24px 0;
-  //}
-  //}
+    & .me-icon-button.mdc-icon-button {
+      background: $surface-color;
+      transition: 0.2s all ease 0s;
+      @include mdc-icon-button-icon-size($width: 24px, $height: 24px, $padding: 10px);
+
+      & svg {
+        fill: lighten($font-tertiary-color, 30%);
+      }
+
+      @include mdc-layout-grid-media-query_("phone") {
+        display: block;
+      }
+
+      &--on {
+        //background: $brand-color;
+
+        & svg {
+          fill: #EA4335;
+        }
+      }
+    }
+  }
 
   &__place, &__date {
     display: flex;
-    @include mdc-layout-grid-media-query_("phone") {
-
+    & a {
+      @include is-clickable;
     }
 
     &-title {
@@ -197,7 +208,7 @@
   }
 
   &__description {
-    margin: 35px 0;
+    padding: 35px 0;
 
     & button {
       margin: auto;
@@ -245,7 +256,18 @@
   //}
 
   &__similar {
-    //margin-top: 85px;
+    .mdc-layout-grid__cell {
+      @include mobile-only {
+        margin: 0px;
+        padding: 24px;
+        border-bottom: 1px solid $border-color;
+      }
+      &:last-child {
+        @include mobile-only {
+          border-bottom: none;
+        }
+      }
+    }
 
 
     &__like-button {
@@ -257,9 +279,9 @@
       }
     }
 
-    @include mdc-layout-grid-media-query_("phone") {
-      margin-top: 60px;
-    }
+    // @include mdc-layout-grid-media-query_("phone") {
+    //   margin-top: 60px;
+    // }
 
     & .mdc-layout-grid__inner {
       @include mdc-layout-grid-media-query_("phone") {
