--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -1,11 +1,6 @@
 @import "variables";
 
 .me-page {
-  --mdc-layout-grid-margin-phone: 0;
-  --mdc-layout-grid-gutter-phone: 0 16px;
-  --mdc-layout-grid-margin-desktop: 0;
-  --mdc-layout-grid-gutter-desktop: 6px 24px;
-
   color: $font-primary-color;
   @include is-show-in-animated;
   @include mdc-layout-grid-media-query_("phone") {
@@ -113,7 +108,7 @@
     }
   }
 
-  &--profile__section {
+  &--profile {
     padding: 24px 0 0 0;
     min-height: 45vh;
     @include is-open-up-animated;
