--- a/web/app/assets/stylesheets/components/me-section.scss
+++ b/web/app/assets/stylesheets/components/me-section.scss
@@ -1,4 +1,9 @@
 .me-section {
+  --mdc-layout-grid-margin-phone: 0;
+  --mdc-layout-grid-gutter-phone: 0 16px;
+  --mdc-layout-grid-margin-desktop: 0;
+  --mdc-layout-grid-gutter-desktop: 6px 24px;
+
   width: 100%;
   margin: 12px 0;
   padding: 24px 0;
@@ -8,20 +13,43 @@
     justify-content: center;
     margin: 2px 0;
   }
-  @include mdc-layout-grid-media-query_("phone") {
+  @include mobile-only {
     max-width: unset;
     padding: 15px 0 12px 0;
     margin: 6px auto;
     //border-bottom: 5px solid $surface-tertiary-color;
   }
 
+  &--full {
+    @include mobile-only {
+      padding: 0;
+      border-top-left-radius: 16px;
+      border-top-right-radius: 16px;
+      overflow: hidden;
+    }
+  }
+
+  [data-controller="events"][data-action="show"] & {
+    @include desktop-only {
+      margin: 12px 0;
+      padding: 12px 0;
+      border-radius: $media-border-radius;
+    }
+  }
 
   &__inner {
     @include desktop-only {
       width: $main-content-width;
     }
+    [data-controller="events"][data-action="show"] & {
+      @include desktop-only {
+        width: calc(100% - 48px);
+      }
+    }
     .me-section--full & {
-      width: 100%;
+      @include desktop-only {
+        width: 100% !important;
+      }
     }
   }
 
@@ -41,19 +69,11 @@
     justify-content: space-between;
     @include mdc-layout-grid-media-query_("phone") {
       font-size: 18px;
+      font-weight: 600;
       line-height: 1em;
       padding: 3px $section-padding-phone 0;
       justify-content: space-between;
     }
   }
-
-
-  //&--without-margin {
-  //  padding: 0;
-  //  margin: 0 auto 12px auto;
-  //  @include mobile-only {
-  //    padding: 0 20px 12px 20px;
-  //  }
-  //}
 
 }
