--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -17,11 +17,17 @@
     [data-section-disposition="vertical"] & {
       margin: 6px 0 35px 0;
     }
-    .me-page--profile__section & {
+    .me-page--profile & {
       //grid-column: 8 span;
       margin: 0 0 35px 0;
     }
   }
+
+  // .me-event-single__similar & {
+  //   @include mobile-only {
+  //     padding: 0 $section-padding-phone;
+  //   }
+  // }
 
   & h3 {
     font-family: $font-secondary-family;
@@ -178,20 +184,20 @@
     //}
   }
 
-  &::before {
-    content: close-quote;
-    width: 100%;
-    height: 260px;
-    position: absolute;
-    left: 0;
-    animation-name: show-in;
-    animation-duration: 1.5s;
-    //border-bottom: 1px solid darken($surface-color, 5%);
-  }
+  // &::before {
+  //   content: close-quote;
+  //   width: 100%;
+  //   height: 260px;
+  //   position: absolute;
+  //   left: 0;
+  //   animation-name: show-in;
+  //   animation-duration: 1.5s;
+  //   //border-bottom: 1px solid darken($surface-color, 5%);
+  // }
 
-  & .mdc-layout-grid__cell--span-3, .mdc-layout-grid__cell--span-3-desktop {
-    grid-column-end: span 2;
-  }
+  // & .mdc-layout-grid__cell--span-3, .mdc-layout-grid__cell--span-3-desktop {
+  //   grid-column-end: span 2;
+  // }
 
 }
 
