--- a/web/app/assets/stylesheets/components/me-tab-bar.scss
+++ b/web/app/assets/stylesheets/components/me-tab-bar.scss
@@ -9,7 +9,7 @@
   @include mdc-tab-bar-density(-3);
   background: $surface-color;
   display: block;
-  border-bottom: 1px solid $background-color;
+  // border-bottom: 1px solid $background-color;
   width: auto;
   @include desktop-only {
     z-index: 2;
@@ -20,12 +20,15 @@
   }
   @include mobile-only {
     @include mdc-tab-bar-density(-1);
+    // display: none;
     //border-bottom: 6px solid $background-color;
   }
 
   & .mdc-tab {
+    width: auto;
+    // max-width: 100px;
     @include desktop-only {
-      max-width: 100px;
+
     }
   }
 
@@ -37,10 +40,19 @@
   }
 
   & .mdc-tab__text-label {
-    text-transform: capitalize;
     font-size: 12px;
     letter-spacing: 0.3px;
     font-weight: 600;
+  }
+
+  & .mdc-tab-scroller__scroll-content {
+    flex: initial;
+  }
+
+  & .mdc-tab-indicator__content {
+    border-top-width: 4px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
   }
 
 }
