--- a/web/app/assets/stylesheets/components/me-top-app-bar.scss
+++ b/web/app/assets/stylesheets/components/me-top-app-bar.scss
@@ -24,6 +24,10 @@ $border-color: #e0e0e0;
     box-shadow: none;
   }
 
+  [data-action="search"] & {
+    box-shadow: none;
+  }
+
   // &.mdc-top-app-bar--fixed-scrolled {
   //   border-bottom: 1px solid $border-color;
   //   box-shadow: unset;
@@ -169,6 +173,7 @@ $border-color: #e0e0e0;
       height: 56px;
       display: flex;
       align-items: center;
+      padding: 0 $section-padding-phone;
     }
   }
 
@@ -215,10 +220,4 @@ $border-color: #e0e0e0;
     }
   }
 
-  &--bot-on {
-    @include mdc-layout-grid-media-query_("phone") {
-      padding: 0;
-      margin: 0;
-    }
-  }
 }
