--- a/web/app/views/bot/onboarding.html.erb
+++ b/web/app/views/bot/onboarding.html.erb
@@ -1,3 +1,3 @@
-<section class="me-page me-page--profile__section is-animated">
+<section class="me-page me-page--profile is-animated">
   <%= render partial: 'components/swipable/swipable' %>
 </section>
