--- a/web/app/views/feeds/category.html.erb
+++ b/web/app/views/feeds/category.html.erb
@@ -1,4 +1,4 @@
-<section class="me-page me-page--profile__section is-animated">
+<section class="me-page me-page--profile is-animated">
   <% content_for :canonical_url, category_events_url %>
   <% content_for :amp_url, category_events_url(format: :amp) %>
 
@@ -25,7 +25,11 @@
     </div>
   </section>
 
-  <%= render partial: "components/collection/collection", locals: { data: @data, props: {infinite_scroll: true} } %>
+  <section class="me-section">
+    <section class="me-section__inner">
+      <%= render partial: "components/collection/collection", locals: { data: @data, props: {infinite_scroll: true} } %>
+    </section>
+  </section>
 
   <% unless current_user %>
     <%= link_to root_path, style: "display: flex" do %>
