--- a/web/app/views/feeds/week.html.erb
+++ b/web/app/views/feeds/week.html.erb
@@ -1,4 +1,4 @@
-<section class="me-page me-page--profile__section is-animated">
+<section class="me-page me-page--profile is-animated">
 
   <% content_for :canonical_url, week_events_url %>
   <% content_for :amp_url, week_events_url(format: :amp) %>
@@ -13,7 +13,11 @@
 
   </script>
 
-  <%= render partial: "components/collection/collection", locals: {data: @data, props: {infinite_scroll: true} } %>
+  <section class="me-section">
+    <section class="me-section__inner">
+      <%= render partial: "components/collection/collection", locals: {data: @data, props: {infinite_scroll: true} } %>
+    </section>
+  </section>
 
   <% unless current_user %>
     <%= link_to root_path, style: "display: flex" do %>
