--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -1,4 +1,4 @@
-<section class="me-page me-page--profile__section is-animated">
+<section class="me-page me-page--profile is-animated">
   <% content_for :canonical_url, organizer_url(@organizer, format: :html) %>
 
   <%= notice %>
@@ -12,5 +12,9 @@
 
   </script>
 
-  <%= render partial: "components/collection/collection", locals: {data: @data, props: {infinite_scroll: true}} %>
+  <section class="me-section">
+    <section class="me-section__inner">
+      <%= render partial: "components/collection/collection", locals: {data: @data, props: {infinite_scroll: true}} %>
+    </section>
+  </section>
 </section>
