--- a/web/app/views/places/show.html.erb
+++ b/web/app/views/places/show.html.erb
@@ -1,4 +1,4 @@
-<section class="me-page me-page--profile__section is-animated">
+<section class="me-page me-page--profile is-animated">
   <% content_for :canonical_url, place_url(@place, format: :html) %>
 
   <%= notice %>
@@ -11,7 +11,9 @@
   ]
 
   </script>
-
-  <%= render partial: "components/collection/collection", locals: { data: @data, props: {infinite_scroll: true} } %>
+  <section class="me-section">
+    <section class="me-section__inner">
+      <%= render partial: "components/collection/collection", locals: { data: @data, props: {infinite_scroll: true} } %>
+    </section>
+  </section>
 </section>
-
