Adjust style for movies and dates

--- a/web/app/assets/stylesheets/components/me-event-single.scss
+++ b/web/app/assets/stylesheets/components/me-event-single.scss
@@ -70,6 +70,9 @@
     grid-template-columns: 50% 1fr;
     grid-gap: 24px;
     @include with-divider;
+    @include mobile-only {
+      grid-template-columns: auto;
+    }
   }
 
   &__head {
