--- a/web/app/assets/stylesheets/components/me-movie.scss
+++ b/web/app/assets/stylesheets/components/me-movie.scss
@@ -16,7 +16,7 @@
   }
 
   &__container-title {
-
+    padding: 3px 0 12px;
   }
 
   &__grid {
@@ -37,7 +37,10 @@
       border-radius: $media-border-radius;
       width: 100%;
       max-width: 200px;
-      min-height: 204px;
+      min-height: 270px;
+      [data-action="show"] & {
+        min-height: 305px;
+      }
     }
   }
 
@@ -48,7 +51,7 @@
     margin: 6px 0 3px 0;
     .me-movie--single & {
       padding: 0;
-      margin: 25px 0 30px 15px;
+      margin: 25px 0 30px 0;
       text-align: center;
       line-height: 1.3em;
       font-family: $font-primary-family;
