--- a/web/app/assets/stylesheets/components/me-top-app-bar.scss
+++ b/web/app/assets/stylesheets/components/me-top-app-bar.scss
@@ -154,7 +154,7 @@ $border-color: #e0e0e0;
       cursor: pointer;
       display: flex;
       align-items: center;
-      margin: 2px 0 2px -10px;
+      margin: 2px 6px 2px -18px;
       color: $font-secondary-color;
     }
   }
